assets/css/timeline.css
@import url(https://fonts.googleapis.com/css?family=Oswald:300,400,500|Raleway:400,700,400italic,700italic);

:root {
    --primary-color: #000000;
    --secondary-color: rgba(0, 0, 0, 0.75);
    --background-color: #ffffff;
}

*,
:before,
:after {
    box-sizing: border-box;
}

body {
    background-color: var(--background-color);
    color: var(--primary-color);
    font: 16px/1.25 'Raleway', sans-serif;
}

#wrapper {
    margin-left: auto;
    margin-right: auto;
    max-width: 80em;
}

#container {
    float: left;
    padding: 1em;
    width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Oswald', sans-serif;
    font-weight: 400;
}

ul,
ol {
    margin: 1em 0;
}

/* Process Chart Styles */
ol.process-chart {
    color: var(--primary-color);
    counter-reset: item;
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    margin: 0 0 0 1em;
    padding: 0;
    overflow: hidden; /* Prevent subpixel gaps */
}

ol.process-chart > li,
ol.process-chart > li > div {
    position: relative;
}

ol.process-chart > li {
    counter-increment: item;
    flex-basis: 0;
    flex-grow: 1;
    margin: 1em 1em 1em -1em;
    min-width: 11.25em;
    padding: 1em 1em 1em 2em;
}

ol.process-chart > li:before,
ol.process-chart > li > div:before {
    color: var(--secondary-color);
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
}

ol.process-chart > li:before {
    content: 'Step';
    display: inline-block;
    font-weight: 300;
    left: 2em;
    letter-spacing: 0.1em;
    position: absolute;
    top: 1em;
    transform: rotate(90deg);
    transform-origin: 25% 50%;
}

ol.process-chart > li:after {
    content: '';
    position: absolute;
    right: -1em;
    top: 0;
    width: 0;
    height: 0;
    border: 1em solid transparent;
    border-left-color: var(--bg-color); /* Use the background color */
    z-index: 1;
    box-shadow: -1px 0 0 0 var(--bg-color); /* Cover the horizontal gap */
}

ol.process-chart > li > div {
    padding: 0 0 0 1em;
}

ol.process-chart > li > div:before {
    content: counter(item, decimal-leading-zero);
    font-size: 3em;
    font-weight: 500;
    line-height: 1;
}

/*** MEDIA QUERIES ***/
@media only screen and (max-width: 40em) {
    ol.process-chart {
        margin: 1em 0 0 0;
        padding: 1em 0 0 0;
        flex-direction: column; /* Stack items vertically on small screens */
    }

    ol.process-chart > li {
        flex-basis: inherit;
        margin: -1em 0 1em 0;
        min-width: inherit;
        padding: 1em 1em 0 1em;
    }

    ol.process-chart > li:before {
        left: 1em;
        top: 2em;
    }

    ol.process-chart > li:after {
        border-left-color: transparent !important;
        border-top-color: var(--bg-color); /* Use the background color */
        bottom: -1em;
        left: 0;
        right: inherit;
        top: inherit;
        width: 100%;
        height: 0;
        box-shadow: 0 -1px 0 0 var(--bg-color); /* Cover the vertical gap */
    }

    ol.process-chart > li > div {
        padding: 1em 1em 0 1em;
    }
}

